--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,14 @@
-<%@movies.each do |movie|%>
-<li> <%=movie%> </li>
-<%end%>
+<ul>
+<% @movies.each do |movie| %>
+  <li>
+    <strong><%= movie.title %></strong> (<%= movie.rating %>):
+    <%= total_gross(movie) %>
+  </li>
+  <p>
+  <%= truncate(movie.description, length: 40, separator: " ") %>
+</p>
+<p>
+  <%= year_of(movie) %>
+</p>
+<% end %>
+</ul>
