--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header><h1>Flix</h1></header>
+    <header><%=image_tag("logo") %></header>
       <div class= "content">
         <%= yield %>
       </div>
