add more columns and complete CRUD some issues with delete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   </head>
 
   <body>
-    <header><%=image_tag("logo") %></header>
+    <%= render "layouts/header"%>
       <div class= "content">
         <%= yield %>
       </div>
-    <footer>Made by Haider</footer>
+    <%= render "layouts/footer"%>
+    
   </body>
 </html>
