--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
   <section class="movie">
     <div class="summary">
       <h2>
-        <%= movie.title %>
+        <%= image_tag movie.image_file_name %> <%= link_to movie.title, movie %>
       </h2>
       <h3>
         <%= total_gross(movie) %>
@@ -13,3 +13,6 @@
     </div>
   </section>
 <% end %>
+<section class="admin">
+  <%= link_to "Add Movie", new_movie_path, class: "button"%>
+</section>
