--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: movie, local: true) do |f| %>
+  
   <%= f.label :title %>
   <%= f.text_field :title %>
 
@@ -6,7 +7,7 @@
   <%= f.text_area :description, rows: 7 %>
 
   <%= f.label :rating %>
-  <%= f.text_field :rating %>
+  <%= f.select :rating, Movie::RATINGS, prompt: "Pick one" %>
 
   <%= f.label :released_on %>
   <%= f.date_field :released_on %>
@@ -15,13 +16,13 @@
   <%= f.number_field :total_gross %>
 
   <%= f.label :director %>
-<%= f.text_field :director %>
+  <%= f.text_field :director %>
 
-<%= f.label :duration %>
-<%= f.text_field :duration %>
+  <%= f.label :duration %>
+  <%= f.text_field :duration %>
 
-<%= f.label :image_file_name %>
-<%= f.text_field :image_file_name %>
+  <%= f.label :image_file_name %>
+  <%= f.text_field :image_file_name %>
 
   <%= f.submit %>
 <% end %>
