fix some issues

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -9,3 +9,8 @@
     <%= flash[:alert] %>
   </div>
 <% end %>
+<% if flash[:message] %>
+  <div class="flash message">
+    <%= flash[:message] %>
+  </div>
+<% end %>
