--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -29,9 +29,6 @@
 </section>
 <section class="admin">
     <%= link_to "Edit", edit_movie_path(@movie), class: "button"%>
-    <%= link_to "Delete", movie_path(@movie), method: :delete, data:{confirm: "are you sure?"}%>
-    <%= link_to "Destroy", movie_path(@movie), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
+    <%= button_to "Delete", movie_path(@movie), method: :delete, data:{confirm: "are you sure?"}%>
+    
 </section>
