--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,18 +1,25 @@
 <% @movies.each do |movie| %>
   <section class="movie">
+    <div class="image">
+      <%= image_tag movie.image_file_name %>
+    </div>
     <div class="summary">
       <h2>
-        <%= image_tag movie.image_file_name %> <%= link_to movie.title, movie %>
+        <%= link_to movie.title, movie_path(movie) %>
       </h2>
       <h3>
         <%= total_gross(movie) %>
       </h3>
+      <span class="stars">
+      <%= average_stars(movie) %>
+      </span>
       <p>
         <%= truncate(movie.description, length: 150, separator: ' ') %>
       </p>
     </div>
   </section>
 <% end %>
+
 <section class="admin">
-  <%= link_to "Add Movie", new_movie_path, class: "button"%>
+  <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
 </section>
