--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
 <section class="user">
   <h1><%= @user.name %></h1>
   <h2><%= mail_to(@user.email) %></h2>
+  <% if current_user == @user %>
    <div class="actions">
     <%= link_to "Edit Account", edit_user_path(@user),
                      class: "button edit" %>
     <%= button_to 'Delete Account', @user, method: :delete,
               data: { confirm: "Permanently delete your account!?" },
               class: "button delete" %>
-  </div>
+    </div>
+  <%end%>
 </section>
