genre db scop slug

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="summary">
       <h2>
-        <%= link_to movie.title, movie_path(movie) %>
+        <%= link_to movie.title, movie %>
       </h2>
       <h3>
         <%= total_gross(movie) %>
@@ -19,7 +19,8 @@
     </div>
   </section>
 <% end %>
-
+<% if current_user_admin? %>
 <section class="admin">
   <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
 </section>
+<%end%>
