--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -33,11 +33,40 @@
               class: 'review' %>
   </div>
 </section>
-
+<% if current_user_admin? %>
 <section class="admin">
   <%= link_to 'Edit', edit_movie_path(@movie), class: 'button' %>
   <%= button_to 'Delete', movie_path(@movie), class: 'button',
                 method: :delete,
                 data: { confirm: 'Are you sure?' } %>
 </section>
+<%end%>
+<aside>
+<% if @fans.present? %>
+    <h4>Fans</h4>
+    <ul>
+      <% @fans.each do |user| %>
+        <li>
+          <%= link_to user.name, user %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</aside>
+<% if current_user %>
+  <div class="faves">
+    <%= fave_or_unfave_button(@movie, @favorite) %>
+    <div class="count">
+      <%= @fans.size %>
+    </div>
+  </div>
+<% end %>
+<% if @genres.present? %>
+  <h4>Genres</h4>
+  <ul>
+    <% @genres.each do |g| %>
+      <li><%= g.name %></li>
+    <% end %>
+  </ul>
+<% end %>
     
