--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,13 +3,22 @@
     <%= link_to image_tag("logo"), root_path %>
     <ul class= "left">
       <li>
-        <%= link_to "All Movies", root_path, class: "button" %>
+        <%= link_to current_user.name, current_user, class: "button" %>
       </li>
     </ul>
     <ul class="right">
     <% if current_user %>
       <li>
-        <%= link_to current_user.name, current_user, class: "button" %>
+        <%= link_to "All Movies", root_path, class: "button" %>
+      </li>
+      <li>
+        <%= link_to "Released", filtered_movies_path(:released), class: "button" %>
+      </li>
+      <li>
+        <%= link_to 'Upcoming', filtered_movies_path(:upcoming), class: "button" %>
+      </li>
+      <li>
+        <%= link_to 'Recent', filtered_movies_path(:recent), class: "button" %>
       </li>
       <li>
         <%= button_to "Sign Out", session_path, method: :delete, class: "button" %>
@@ -21,6 +30,7 @@
       <li>
         <%= link_to "Sign Up", signup_path, class: "button" %>
       </li>
+      
     <% end %>
 </ul>
   </nav>
