--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,12 +3,6 @@
     <%= link_to image_tag("logo.png"), root_path %>
     <ul class= "left">
       <li>
-        <%= link_to current_user.name, current_user, class: "button" %>
-      </li>
-    </ul>
-    <ul class="right">
-    <% if current_user %>
-      <li>
         <%= link_to "All Movies", root_path, class: "button" %>
       </li>
       <li>
@@ -20,9 +14,11 @@
       <li>
         <%= link_to 'Recent', filtered_movies_path(:recent), class: "button" %>
       </li>
-      <li>
-        <%= button_to "Sign Out", session_path, method: :delete, class: "button" %>
-      </li>
+    </ul>
+    <ul class="right">
+    <% if current_user %>
+      <li><%= link_to current_user.name, current_user, class: "button" %></li>
+      <li><%= button_to "Sign Out", session_path, method: :delete, class: "button" %></li>
     <% else %>
       <li>
         <%= link_to "Sign In", signin_path, class: "button" %>
@@ -30,8 +26,8 @@
       <li>
         <%= link_to "Sign Up", signup_path, class: "button" %>
       </li>
-      
     <% end %>
+      
 </ul>
   </nav>
 </header>
